--- a/index.Rmd
+++ b/index.Rmd
@@ -21,6 +21,7 @@ reggae_music <- get_playlist_audio_features("", "3Hj0cp2SSdvJWmiyYnStLG")
 
 ### Introduction
 
+zhello
 
 
 
@@ -35,6 +36,7 @@ dance_valence_plot <- ggplot(reggae_music, aes(x=danceability, y=valence)) +
 ```{r}
 dance_valence_plot
 ```
+
 ***
 sidebar ik heb wat veranderd
 
