--- a/index.Rmd
+++ b/index.Rmd
@@ -11,34 +11,81 @@ library(tidyverse)
 library(spotifyr)
 library(compmus)
 library(ggplot2)
-```
 
-
-```{r}
 reggae_music <- get_playlist_audio_features("", "3Hj0cp2SSdvJWmiyYnStLG")
 ```
 
 
 ### Introduction
 
-zhello
+I would like to focus on reggae music this course. It is a very big genre with a lot of sub-genres. Reggae had its highlights with people like Bob Marley and Lee 'Scratch' Perry, but nowadays it isn't that big anymore. A lot of people from different ethnicities and ages across the world love reggae and continue to make reggae music. It is very interesting to see so many different kinds of people enjoy the music that originated in Jamaica. I have a reggae-playlist in which I put everything from roots reggae to a reggae-punk fusion and dub. When I listen to music it is almost exclusively via Spotify and I actually don't listen to that playlist a lot. I mostly listen to my liked songs which is a list of 4700 songs of all kinds. Maybe there are some sub-genres that is missed in reggae, or maybe the playlist is not big enough. Songs like One Drop of Bob Marley & the Wailers are very typical for reggae. It gives a lot of positive energy and is very easy going. A song like Full Speed of Mike Pinto has the very recognizeable reggae feeling to it but it also has a hard-rock section halfway through which is very untypical. 
 
 
 
 ### Visualization
 
+
+
+#### Graph 1
+
 ```{r}
-dance_valence_plot <- ggplot(reggae_music, aes(x=danceability, y=valence)) +
+ggplot(reggae_music, aes(x=danceability, y=valence)) +
   geom_point() +
   theme_classic()
+
 ```
+
+reggae is dus heel blij en dansbaar. :)
+
+#### Graph 2
 
 ```{r}
-dance_valence_plot
+pata_pata <-
+  get_tidy_audio_analysis("3uy90vHHATPjtdilshDQDt") |>
+  select(segments) |>
+  unnest(segments)
+
 ```
 
+#### Graph 3
+
+```{r}
+pata_pata |>
+  mutate(loudness_max_time = start + loudness_max_time) |>
+  arrange(loudness_max_time) |>
+  mutate(delta_loudness = loudness_max - lag(loudness_max)) |>
+  ggplot(aes(x = loudness_max_time, y = pmax(0, delta_loudness))) +
+  geom_line() +
+  xlim(0, 30) +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "Novelty")
+
+```
+
+
+```{r}
+pata_pata |>
+  mutate(pitches = map(pitches, compmus_normalise, "clr")) |>
+  arrange(start) |>
+  mutate(pitches = map2(pitches, lag(pitches), `-`)) |>
+  slice(-1) |> 
+  compmus_gather_chroma() |> 
+  group_by(start, duration) |> 
+  summarise(novelty = sum(log1p(pmax(value, 0)))) |> 
+  ggplot(aes(x = start + duration / 2, y = novelty)) +
+  geom_line() +
+  xlim(0, 30) +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "Novelty")
+```
+
+
+
 ***
-sidebar ik heb wat veranderd
+Sidebar voor extra uitleg
+
 
 ### Conclusion
+
+Ewaja
 
