begin huiswerk week 12

--- a/index.Rmd
+++ b/index.Rmd
@@ -8,9 +8,31 @@ date: "2024-02-28"
 
 ```{r}
 library(tidyverse)
+library(tidymodels)
 library(spotifyr)
-library(compmus)
+library(ggdendro)
+library(heatmaply)
 library(ggplot2)
+library(compmus)
+
+get_conf_mat <- function(fit) {
+  outcome <- .get_tune_outcome_names(fit)
+  fit |> 
+    collect_predictions() |> 
+    conf_mat(truth = outcome, estimate = .pred_class)
+}  
+
+get_pr <- function(fit) {
+  fit |> 
+    conf_mat_resampled() |> 
+    group_by(Prediction) |> mutate(precision = Freq / sum(Freq)) |> 
+    group_by(Truth) |> mutate(recall = Freq / sum(Freq)) |> 
+    ungroup() |> filter(Prediction == Truth) |> 
+    select(class = Prediction, precision, recall)
+}  
+
+Dub_side_of_the_moon <- get_playlist_audio_features("", "6NZckmxOUUYgPcx9wm8UVJ")
+Dark_side_of_the_moon <- get_playlist_audio_features("", "06qCn3TG1q0Aw5o3ky61cj")
 ```
 
 
@@ -19,8 +41,18 @@ library(ggplot2)
 I would like to focus on reggae music this course. It is a very big genre with a lot of sub-genres. Reggae had its highlights with people like Bob Marley and Lee 'Scratch' Perry, but nowadays it isn't that big anymore. A lot of people from different ethnicities and ages across the world love reggae and continue to make reggae music. It is very interesting to see so many different kinds of people enjoy the music that originated in Jamaica. I have a reggae-playlist in which I put everything from roots reggae to a reggae-punk fusion and dub. When I listen to music it is almost exclusively via Spotify and I actually don't listen to that playlist a lot. I mostly listen to my liked songs which is a list of 4700 songs of all kinds. Maybe there are some sub-genres that is missed in reggae, or maybe the playlist is not big enough. Songs like One Drop of Bob Marley & the Wailers are very typical for reggae. It gives a lot of positive energy and is very easy going. A song like Full Speed of Mike Pinto has the very recognizeable reggae feeling to it but it also has a hard-rock section halfway through which is very untypical. 
 
 
+### week 7 huiswerk
 
-### Visualization
+
+### week 8 huiswerk
+
+
+### week 9 huiswerk
+
+
+### week 10 huiswerk
+
+### Week 11 huiswerk
 
 
 
@@ -61,9 +93,9 @@ This is a tempogram of Kingston Town bij Alborosie.
 #### Graph 3
 
 ```{r}
-Joanna_gimme_hope <- get_tidy_audio_analysis("6295Cr4SGdjJgnJ6DLtZFn")
+full_speed <- get_tidy_audio_analysis("5JUcFTvDLN67VthAQlLQFe")
 
-Joanna_gimme_hope |>
+full_speed |>
   tempogram(window_size = 8, hop_size = 1, cyclic = TRUE) |>
   ggplot(aes(x = time, y = bpm, fill = power)) +
   geom_raster() +
@@ -71,11 +103,263 @@ Joanna_gimme_hope |>
   labs(x = "Time (s)", y = "Tempo (BPM)") +
   theme_classic()
 ```
-This is a tempogram of Joanna Gimme Hope by Eddy Grant. As you can see the BPM stays the same for the whole song. 
+This is a tempogram of Full speed by Mike Pinto. As you can see the BPM changes halfway through. This is the part where the hardrock part starts. 
 
 
-***
-I have made a tempogram of the song Kingston Town by Alborosie. As you can see this song stays steady on the 150 bpm. However it  
+### week 12 huiswerk
+
+#### code 1
+
+```{r}
+halloween <-
+  get_playlist_audio_features("bnfcollection", "1vsoLSK3ArkpaIHmUaF02C") |>
+  add_audio_analysis() |>
+  mutate(
+    segments = map2(segments, key, compmus_c_transpose),
+    pitches =
+      map(segments,
+        compmus_summarise, pitches,
+        method = "mean", norm = "manhattan"
+      ),
+    timbre =
+      map(
+        segments,
+        compmus_summarise, timbre,
+        method = "mean"
+      )
+  ) |>
+  mutate(pitches = map(pitches, compmus_normalise, "clr")) |>
+  mutate_at(vars(pitches, timbre), map, bind_rows) |>
+  unnest(cols = c(pitches, timbre))
+```
+
+#### code 2
+
+```{r}
+halloween_juice <-
+  recipe(
+    track.name ~
+      danceability +
+      energy +
+      loudness +
+      speechiness +
+      acousticness +
+      instrumentalness +
+      liveness +
+      valence +
+      tempo +
+      duration +
+      C + `C#|Db` + D + `D#|Eb` +
+      E + `F` + `F#|Gb` + G +
+      `G#|Ab` + A + `A#|Bb` + B +
+      c01 + c02 + c03 + c04 + c05 + c06 +
+      c07 + c08 + c09 + c10 + c11 + c12,
+    data = halloween
+  ) |>
+  step_center(all_predictors()) |>
+  step_scale(all_predictors()) |> 
+  # step_range(all_predictors()) |> 
+  prep(halloween |> mutate(track.name = str_trunc(track.name, 20))) |>
+  juice() |>
+  column_to_rownames("track.name")
+```
+
+#### code 3
+
+```{r}
+halloween_dist <- dist(halloween_juice, method = "euclidean")
+```
+
+#### code 4
+
+```{r}
+halloween_dist |> 
+  hclust(method = "single") |> # Try single, average, and complete.
+  dendro_data() |>
+  ggdendrogram()
+```
+
+#### code 5
+
+```{r}
+heatmaply(
+  halloween_juice,
+  hclustfun = hclust,
+  hclust_method = "average",  # Change for single, average, or complete linkage.
+  dist_method = "euclidean"
+)
+```
+
+#### code 6
+
+```{r}
+pop <- get_playlist_audio_features("spotify", "37i9dQZF1DWWEcRhUVtL8n")
+party <- get_playlist_audio_features("spotify", "37i9dQZF1DWTujiC7wfofZ")
+workout <- get_playlist_audio_features("spotify", "37i9dQZF1DWZq91oLsHZvy")
+indie <-
+  bind_rows(
+    pop |> mutate(playlist = "Indie Pop") |> slice_head(n = 20),
+    party |> mutate(playlist = "Indie Party") |> slice_head(n = 20),
+    workout |> mutate(playlist = "Indie Running") |> slice_head(n = 20)
+  ) |> 
+  add_audio_analysis()
+```
+
+#### code 7
+
+```{r}
+indie_features <-
+  indie |>  # For your portfolio, change this to the name of your corpus.
+  mutate(
+    playlist = factor(playlist),
+    segments = map2(segments, key, compmus_c_transpose),
+    pitches =
+      map(
+        segments,
+        compmus_summarise, pitches,
+        method = "mean", norm = "manhattan"
+      ),
+    timbre =
+      map(
+        segments,
+        compmus_summarise, timbre,
+        method = "mean",
+      )
+  ) |>
+  mutate(pitches = map(pitches, compmus_normalise, "clr")) |>
+  mutate_at(vars(pitches, timbre), map, bind_rows) |>
+  unnest(cols = c(pitches, timbre))
+```
+
+#### code 8
+
+```{r}
+indie_recipe <-
+  recipe(
+    playlist ~
+      danceability +
+      energy +
+      loudness +
+      speechiness +
+      acousticness +
+      instrumentalness +
+      liveness +
+      valence +
+      tempo +
+      duration +
+      C + `C#|Db` + D + `D#|Eb` +
+      E + `F` + `F#|Gb` + G +
+      `G#|Ab` + A + `A#|Bb` + B +
+      c01 + c02 + c03 + c04 + c05 + c06 +
+      c07 + c08 + c09 + c10 + c11 + c12,
+    data = indie_features           # Use the same name as the previous block.
+  ) |>
+  step_center(all_predictors()) |>
+  step_scale(all_predictors())      # Converts to z-scores.
+  # step_range(all_predictors())    # Sets range to [0, 1].
+```
+
+#### code 9
+
+```{r}
+indie_cv <- indie_features |> vfold_cv(5)
+```
+
+#### code 10
+
+```{R}
+knn_model <-
+  nearest_neighbor(neighbors = 1) |>
+  set_mode("classification") |> 
+  set_engine("kknn")
+indie_knn <- 
+  workflow() |> 
+  add_recipe(indie_recipe) |> 
+  add_model(knn_model) |> 
+  fit_resamples(indie_cv, control = control_resamples(save_pred = TRUE))
+```
+
+#### code 11
+
+```{r}
+indie_knn |> get_conf_mat()
+```
+
+#### code 12
+
+```{r}
+indie_knn |> get_conf_mat() |> autoplot(type = "mosaic")
+```
+
+#### code 13
+
+```{r}
+indie_knn |> get_conf_mat() |> autoplot(type = "heatmap")
+```
+
+#### code 14
+
+```{r}
+indie_knn |> get_pr()
+```
+
+#### code 15
+
+```{r}
+forest_model <-
+  rand_forest() |>
+  set_mode("classification") |> 
+  set_engine("ranger", importance = "impurity")
+indie_forest <- 
+  workflow() |> 
+  add_recipe(indie_recipe) |> 
+  add_model(forest_model) |> 
+  fit_resamples(
+    indie_cv, 
+    control = control_resamples(save_pred = TRUE)
+  )
+```
+
+#### code 16
+
+```{r}
+indie_forest |> get_pr()
+```
+
+#### code 17
+
+```{r}
+workflow() |> 
+  add_recipe(indie_recipe) |> 
+  add_model(forest_model) |> 
+  fit(indie_features) |> 
+  pluck("fit", "fit", "fit") |>
+  ranger::importance() |> 
+  enframe() |> 
+  mutate(name = fct_reorder(name, value)) |> 
+  ggplot(aes(name, value)) + 
+  geom_col() + 
+  coord_flip() +
+  theme_minimal() +
+  labs(x = NULL, y = "Importance")
+```
+
+#### code 18
+
+```{r}
+indie_features |>
+  ggplot(aes(x = acousticness, y = c02, colour = playlist, size = energy)) +
+  geom_point(alpha = 0.8) +
+  scale_color_viridis_d() +
+  labs(
+    x = "Acousticness",
+    y = "Timbre Component 2",
+    size = "Energy",
+    colour = "Playlist"
+  )
+```
+
+ 
 
 
 ### Conclusion
